--- a/main/index.html
+++ b/main/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Hello, world!!!</h1>
 
-    <script src="./_test-script.js"></script>
+    <script src="./test-script.js"></script>
 </body>
 
 </html>
