--- a/main/index.html
+++ b/main/index.html
@@ -11,7 +11,10 @@
 <body>
     <h1>Hello, world!!!</h1>
 
+    <div class="badge-base LI-profile-badge" data-locale="ru_RU" data-size="medium" data-theme="dark" data-type="HORIZONTAL" data-vanity="andrey-nikitin-rus" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://ru.linkedin.com/in/andrey-nikitin-rus?trk=profile-badge">Andrey Nikitin</a></div>
+
     <script src="./test-script.js"></script>
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </body>
 
 </html>
